<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_note"
            android:icon="@drawable/ic_note"
            android:title="@string/note" />
        <item
            android:id="@+id/nav_drawer_remainder"
            android:icon="@drawable/ic_remainders"
            android:title="@string/remainder" />
    </group>

    <item android:title="@string/more">
        <menu>
            <item
                android:id="@+id/nav_drawer_archive"
                android:icon="@drawable/ic_archive"
                android:title="@string/archive" />
            <item
                android:id="@+id/nav_drawer_trash"
                android:icon="@drawable/ic_trash"
                android:title="@string/trash" />
        </menu>
    </item>
    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_drawer_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_drawer_about"
                android:icon="@drawable/ic_about"
                android:title="@string/about" />
        </menu>
    </item>
</menu>