<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_note_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewNote">


    <RelativeLayout
        android:id="@+id/top_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_back" />

    </RelativeLayout>

    <EditText
        android:id="@+id/new_note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/title"
        android:inputType="text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/top_menu_layout"/>

    <EditText
        android:id="@+id/new_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/note_text"
        android:inputType="textMultiLine"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@id/new_note_title" />

    <RelativeLayout
        android:id="@+id/bottom_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/add_more_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_add_more" />

        <TextView
            android:id="@+id/edit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/more_option_button"
            android:layout_toEndOf="@+id/add_more_button"
            android:gravity="center"
            android:text="@string/demo_edited" />

        <ImageView
            android:id="@+id/more_option_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_vert" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/more_option_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu_layout">

        <include layout="@layout/more_option" />

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>